--- a/.gitignore
+++ b/.gitignore
@@ -18,12 +18,12 @@ BuildLog.htm
 Makefile.in
 aclocal.m4
 autom4te.cache
-# config
-# config.h
-# config.h.in
+config
+config.h
+config.h.in
 config.log
 config.status
-# configure
+configure
 configure.ac
 Makefile
 stamp-h1
